--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Ara pots tocar la foto de perfil d'algú en un xat de grup i veure ràpidament informació addicional, com ara quants grups teniu en comú. 
