--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Teď můžete ve skupinovém chatu klepnout na něčí profilovou fotografii a rychle si zobrazit další informace, jako třeba v kolika skupinách jste spolu. 
