--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Jetzt kannst du in einem Gruppenchat das Profilfoto von jemandem antippen und sofort weitere Infos sehen, zum Beispiel, wie viele Gruppen ihr gemeinsam habt. 
