--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Kini Anda bisa ketuk foto profil seseorang dalam obrolan grup dan dengan cepat lihat info tambahan seperti berapa banyak grup bersama yang dimiliki. 
