--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• 이제 그룹 대화에서 다른 사람의 프로필 사진을 탭하여 나와 공통되는 그룹 수 등 세부 정보를 신속하게 확인할 수 있습니다. 
