--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Kini anda boleh ketik pada foto profil seseorang dalam sembang kumpulan dan lihat maklumat tambahan dengan segera seperti bilangan kumpulan yang sama dengan anda. 
