--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Je kunt nu op iemands profielfoto klikken in een groepschat om snel meer informatie te zien, zoals hoeveel gemeenschappelijke groepen je hebt. 
