--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Nå kan du trykke på profilbilder i gruppesamtaler og se informasjon om medlemmene, som for eksempel hvor mange grupper dere har til felles. 
