--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Agora você pode tocar na foto do perfil de alguém em um chat em grupo e ver rapidamente as informações adicionais, como quantos grupos vocês têm em comum. 
