--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Teraz môžete ťuknúť na profilovú fotku iného používateľa v skupinovom čete a rýchlo zobraziť ďalšie informácie, napríklad koľko skupín máte spoločných. 
