--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Nu kan du trycka på någons profilbild i en gruppchatt och snabbt se ytterligare information, t.ex. hur många gemensamma grupper ni har. 
