--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Artık bir grup sohbetinde birinin profil fotoğrafına dokunabilir ve kaç tane ortak grubun olduğu gibi ek bilgileri hızla görebilirsin. 
