--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• 現在，你可以在群組聊天中點按某人的個人資料相片，並快速查看其他資訊，例如你們有多少個共同群組。 
