--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Τώρα μπορείς να πατήσεις στη φωτογραφία προφίλ κάποιου ατόμου σε μια ομαδική συνομιλία και να δεις γρήγορα πρόσθετες πληροφορίες, όπως πόσες ομάδες έχετε κοινές. 
