--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Ahora puedes tocar la foto de perfil de alguien en un chat grupal y ver rápidamente información adicional, como cuántos grupos hay en común. 
