--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Profiilikuvaa ryhmäkeskustelussa napauttamalla näet nyt nopeasti lisätietoja käyttäjästä, esimerkiksi kuinka monta yhteistä ryhmää teillä on. 
