--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Dans les conversations de groupe, vous pouvez maintenant appuyer sur la photo de profil des membres pour afficher des informations supplémentaires, comme le nombre de groupes que vous avez en commun. 
