--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• עכשיו אפשר ללחוץ על תמונת הפרופיל של מישהו בצ׳אט קבוצתי ולראות מידע נוסף כמו כמה קבוצות יש לכם במשותף. 
