--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• अब आप ग्रुप चैट में किसी की प्रोफ़ाइल फ़ोटो पर टैप कर सकते हैं और तुरंत अतिरिक्त जानकारी देख सकते हैं जैसे कि आपके कितने समूह समान हैं। 
