--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Sada možete dodirnuti nečiju sliku profila u grupnom razgovoru za brzi pregled dodatnih informacija, primjerice, koliko zajedničkih grupa imate s tom osobom. 
