--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Mostantól egy csoportos csevegésben rákattinthatsz valakinek a profilképére, és gyorsan láthatsz további információkat, például azt, hogy hány közös csoportotok van. 
