--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Da ora puoi toccare sulla foto profilo di una persona in un gruppo per vedere delle informazioni aggiuntive, ad esempio quanti gruppi avete in comune. 
