--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Od teraz stukając zdjęcie profilowe wybranego użytkownika na czacie grupowym, szybko wyświetlisz dodatkowe informacje na jego temat, takie jak liczba Waszych wspólnych grup. 
