--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Agora pode tocar na foto de perfil de alguém num chat de grupo para ver informações adicionais, como o número de grupos que têm em comum. 
