--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can tap on someone's profile photo in a group chat and quickly see additional information like how many groups you have in common. 
+• Теперь вы можете нажать на фото профиля в групповом чате и быстро увидеть дополнительную информацию, например сколько у вас общих групп с этим человеком. 
